# STT-TTS-Server

./: README.md  ROUTES.md  api.py  config.py  config.yaml  healthcheck.py  kokoro_tts.py  occ_emotion.py  phoneme_durations.json  phoneme_to_arkit.json  pyproject.toml  start.py  viseme_to_arkit.json  whisper_stt.py
occ/: __init__.py  config.py  occ_emotion.py
prototypes/audio2face/: audio2face_client.py  config.py
stt/: __init__.py  config.py  whisper_stt.py
tts/: __init__.py  arkit.py  config.py  ipa_to_viseme.json  ipa_to_viseme_fr.json  kokoro_tts.py  phoneme_durations.json
