[project]
name = "whispeer-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "torch",
    "torchvision",
    "kokoro",
    "fastapi>=0.135.1",
    "ctranslate2==4.4.0", # Pin to use CUDA 12
    "faster-whisper-server>=0.0.2",
    "httpx>=0.27",
    "numpy>=2.0",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=8.0,<=9.0",
    "scipy>=1.13",
    "spacy>=3.8.13",
    "peft>=0.18.1",
    "bitsandbytes>=0.49.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that load the real Kokoro model (slow)",
]
